# ifj-project

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  code_gen_example  rozdeleni  str.h  test.go
src/: Makefile  c206.c  code_gen.c  code_gen.h  dl_list.c  dl_list.h  error_codes.h  expression.c  expression.h  expression_stack.c  expression_stack.h  main  main.c  parser.c  parser.h  parser_helpers.h  parser_rules.h  queue.c  queue.h  scanner.c  scanner.h  str.c  str.h  sym_table.h  symtable.c  symtable.h  (+1 more)
tests/: BTreeTests.cpp  CMakeLists.txt  CodeGenTest.cpp  ExpressionParserTests.cpp  ListTests.cpp  ParserTests.cpp  README.md  ScannerTests.cpp  StrLibTests.cpp  basicLexemsSource  keywordsIdsSource  numbersTestSource  stringTestSource
tests/parserTestSources/: basic functions.go  basic3.go
tests/parserTestSources/basic/: basic2.go  basic3.go  basic5-e.go
tests/parserTestSources/constructs/: for-e.go  for-e2.go  for-e3.go  for1.go  for2.go  for3.go  if-e1.go  if-e2.go  if-e3.go  if1.go
tests/parserTestSources/expressions/: expr1-e.go  expr1.go  expr2-e.go  expr2.go  expr3-e .go  expr4-e .go  expr4-e.go
tests/parserTestSources/func_calls/: fnc-e1.go  fnc-e2.go  fnc-e3.go  fnc-e4.go  fnc-e5.go  fnc-e6.go  fnc1.go  fnc2.go  fnc3.go
tests/parserTestSources/semantic/args_returns_count/: func_wrong_param_number-e.go  func_wrong_param_number-e2.go  func_wrong_param_number-e3.go  func_wrong_param_number_after_call-e.go  func_wrong_param_type-e.go  func_wrong_param_type_after_call-e.go  func_wrong_return_number-e.go  func_wrong_return_number_after_call-e.go  func_wrong_return_number_assignment2-e.go  func_wrong_return_type-e.go  func_wrong_return_type_after_call-e.go  type_assignment.go  type_assignment2.go  type_assignment3.go  type_assignment4.go  wrong_type_assignment-e.go  wrong_type_assignment-e2.go  wrong_type_assignment-e3.go
tests/parserTestSources/semantic/divide_zero/: divzero1-e.go
tests/parserTestSources/semantic/expr_compat/: expr_bad_types-e.go  expr_bad_types2-e.go  for-e1.go  for-e2.go  if-e1.go  if-e2.go  if-e3.go  if1.go  if2.go
tests/parserTestSources/semantic/others/: expr1.go  expr2.go  expr3.go  expr_wrong_number-e.go  expr_wrong_number2-e.go  expr_wrong_type-e.go  expr_wrong_type-e2.go  expr_wrong_type-e3.go  expr_wrong_type-e4.go  expr_wrong_type-e5.go  for-e.go  for-e2.go  func_def_after_call.go  func_multiple_return_vars.go  func_multiple_return_vars_after_call.go  func_wrong_return_number-e.go  func_wrong_return_number2-e.go  undef_main_pckg-e.go  underscore_var_assign.go  underscore_var_value-e.go
tests/parserTestSources/semantic/var_def_err/: redef_func-e.go  redef_var-e.go  redef_var_scoped.go  undef_func-e.go  undef_main_func-e.go  undef_var1-e.go  underscore_var_def-e.go
tests/scannerTestSources/: commentsRemoveSource  numbersTestSource  unclosedComment
(+9 files in other folders)
